--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,11 @@ authors = ["Chase <robertchasesommer@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pandas = "^1.5.1"
+requests = "^2.28.1"
+beautifulsoup4 = "^4.11.1"
+ipykernel = "^6.17.1"
+jupyter = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
