--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ beautifulsoup4 = "^4.11.1"
 ipykernel = "^6.17.1"
 jupyter = "^1.0.0"
 lxml = "^4.9.1"
+prefect = "^2.6.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
