--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ jupyter = "^1.0.0"
 lxml = "^4.9.1"
 prefect = {extras = ["aws"], version = "^2.7.0"}
 prefect-aws = "^0.2.0"
+black = "^22.10.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
